--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: ^2.1.0
   fluttertoast: ^3.0.1
   flutter_webview_plugin: ^0.3.3
+  url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,10 @@ flutter:
     - assets/images/service_basic.png
     - assets/images/service_glod.png
     - assets/images/service_diman.png
+    - assets/images/arr_right.png
+    - assets/images/logo.png
+    - assets/images/arrow_down_gray.png
+    - assets/images/abouttop.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
